syntax = "proto3";


service AdminService{
    rpc Register (RegisterRequest) returns (RegisterResponse) {};
    rpc Login (LoginRequest) returns (LoginResponse) {};
    // rpc ActivateUser (ActivateRequest) returns (ActivateResponse) {};
    rpc AddCategory (AddCategoryRequest) returns (AddCategoryResponse) {};
    rpc GetAllCategories (GetAllCategoriesRequest) returns (GetAllCategoriesResponse){};

  }

 message GetAllCategoriesRequest{
  
 }

 message GetAllCategoriesResponse{
    repeated string categoryNames = 1;
  }

  message AddCategoryRequest{
      string categoryName = 1;
  }

  message AddCategoryResponse{
    bool status = 1;
  }

message RegisterRequest{
    string name=1;
    string email=2;
    string password=3;

}


message RegisterResponse {
    string msg = 1;
    bool registerStatus = 2;
  
}

message LoginRequest{
    string email = 1;
    string password = 2;
}

message LoginResponse{
    string msg = 1;
    bool loginStatus = 3;
    string activationToken = 4;
}

